# sketchgan

./: .gitignore  pyproject.toml
src/sketchgan/: __init__.py  __main__.py
